--- a/index.html
+++ b/index.html
@@ -23,21 +23,17 @@
             <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
                 <div id="row-avatar" class="row">
                     <div id="avatar" class="col text-right pr-md-4 ">
-                        <img id="imgAvatar" class="header-imgs" src="assets/images/avatars/avatar-placeholder.png" alt="Avatar">
+                        
                     </div>
                 </div>
-                <div id="row-username" class="row">
-                    <div id="username" class="col text-right pr-md-1">
-                        <a href="index.html">not &lt;username&gt;?</a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </header>
-    <div class="container">
+    <main class="container">
         <div class="row">
                 <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light" id="input-card"> 
-                    <div class="card-header">
+                    <div class="card-header text-white">
                             User Information
                         </div>
                         <div class="form-group">
@@ -58,7 +54,7 @@
                     <h1>Exceptional Food and Drink</h1>
             </div>
         </div>
-    </div>
+    </main>
     <footer class="container">
         <div id="row-footer" class="row">
             <div id="footer-left" class="col-3 footer text-center text-white">
