--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             </div>
         </div>
     </header>
-    <main class="container">
+    <main class="container bg-light">
         <div class="row">
-                <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light" id="input-card"> 
+                <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light shadow-default" id="input-card"> 
                     <div class="card-header text-white">
                             User Information
                         </div>
