front end merge

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
     </header>
     <main class="container bg-light">
-        <div class="row">
-                <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light shadow-default" id="input-card"> 
+        <div class="row mt-5">
+                <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light shadow-default rounded" id="input-card"> 
                     <div class="card-header text-white">
                             User Information
                         </div>
@@ -50,8 +50,8 @@
                         </div>
                         <button type="button" class="btn btn-primary mb-2 mx-2" id = "submit" style="width: 10rem;">Submit</button>
                     </div>
-            <div class="col-5" id="page-title">
-                    <h1>Exceptional Food and Drink</h1>
+            <div class="col-5 text-center mt-5" id="page-title">
+                    <img src="assets/images/animated2.gif" height="80%" width="80%" class="rounded">
             </div>
         </div>
     </main>
