--- a/form-input.html
+++ b/form-input.html
@@ -87,7 +87,7 @@
                                   <textarea class="form-control" id="review-comments" rows="3"></textarea>
                                 </div>
                                 <div class="row justify-content-center border p-2 mr-2">
-                                <input id = "sumbit" class="btn btn-primary" type="submit" value="Submit" >
+                                <input id = "submit" class="btn btn-primary" type="submit" value="Submit" >
                               </div>
                             </div>
 
@@ -143,7 +143,7 @@
   var review_comments;
   var review_image;
   var review_category;
-$("#sumbit").on("click", function(){
+$("#submit").on("click", function(){
     event.preventDefault();
 
     review_image = $("#").val().trim();      // save for the api display
@@ -175,6 +175,7 @@ $("#sumbit").on("click", function(){
       }, function(errorObject) {
           console.log("Errors handled: " + errorObject.code);
   });
+
 
 </script>
 
