update the reference to use "login.js" for index.html + complete logic for login and push new users to the firebase db

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <label for="userName">User Name</label>
                             <input type="text" class="form-control" id="userName">
                         </div>
-                        <button type="button" class="btn btn-primary mb-2 mx-2" id = "submit" style="width: 10rem;">Submit</button>
+                        <button type="button" class="btn btn-primary mb-2 mx-2" id="submit" style="width: 10rem;">Submit</button>
                     </div>
             <div class="col-5 text-center mt-5" id="page-title">
                     <img src="assets/images/animated2.gif" height="80%" width="80%" class="rounded">
@@ -68,7 +68,7 @@
             </div>
         </div>
     </footer>
-    <script src="assets/javascript/favorites.js"></script>
+    <script src="assets/javascript/login.js"></script>
 
 </body>
 </html>
