completed store username in local storage + pull username from local storage to use in "username" link on headers

--- a/content-form.html
+++ b/content-form.html
@@ -15,23 +15,23 @@
 </head>
 
 <body>
-    <header class="container container-fluid border ">
+    <header class="container container-fluid border">
         <div id="row-header" class="row pl-3 bg-white border align-items-center">
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
-            <div id="header-brand" class="col-4 col-md-3 pl-0">
+            <div id="header-brand" class="col-4 col-md-3">
                 MyReviews
             </div>
             <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
                 <div id="row-avatar" class="row">
-                    <div id="avatar" class="col text-right pr-md-4 ">
+                    <div id="avatar" class="col text-right">
                         <img id="imgAvatar" class="header-imgs" src="assets/images/avatars/avatar-placeholder.png" alt="Avatar">
                     </div>
                 </div>
                 <div id="row-username" class="row">
                     <div id="username" class="col text-right pr-md-1">
-                        <a href="index.html">not &lt;username&gt;?</a>
+                        <a id="currentUser" href="index.html"></a>
                     </div>
                 </div>
             </div>
