--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
-            <div id="header-brand" class="col-4 col-md-3 pl-0">
+            <div id="header-brand" class="col-4 col-md-3">
                 MyReviews
             </div>
             <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
                 <div id="row-avatar" class="row">
-                    <div id="avatar" class="col text-right pr-md-4 ">
+                    <div id="avatar" class="col text-right">
                         
                     </div>
                 </div>
