Added the randam chuck norris image extraction and population to the header on load

--- a/content-form.html
+++ b/content-form.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="container container-fluid border">
-        <div id="row-header" class="row pl-3 bg-white border align-items-center">
+        <div id="row-header" class="row py-3 bg-white border align-items-center">
             <div id="header-logo" class="col-2 col-md-2 text-center">
                 <img id="imgLogo" class="header-imgs" src="assets/images/logo.png" alt="logo MyReviews">
             </div>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div id="row-username" class="row">
-                    <div id="username" class="col text-right pr-md-1">
+                    <div id="username" class="col text-right">
                         <a id="currentUser" href="index.html"></a>
                     </div>
                 </div>
@@ -124,6 +124,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="assets/javascript/login.js"></script>
     <script src="assets/javascript/javascript.js"></script>
 </body>
 
