--- a/content-form.html
+++ b/content-form.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/styles/magnific-popup.css">
+    <link rel="stylesheet" href="assets/styles/magnific-popup.css">
     <link rel="stylesheet" href="assets/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
@@ -58,25 +58,13 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-5 col-form-left p-0">
-                                        <div class="form-group m-0">
-                                            <img id="review-img" src="assets/images/avatars/avatar-placeholder.png" alt="Review Item Name">
-                                        </div>
-                                        <div class="form-group m-0">
-                                            <input id="review-name" type="text" class="h5 text-center w-100 py-0 py-md-2"
-                                                maxlength="30" placeholder="Review Name Here">
-                                        </div>
-                                        <div class="form-group m-0">
-                                            <div class="col-auto col mb-4 star-ratings">
-                                                <span id="rating1" class="fa fa-star" rating="1"></span>
-                                                <span id="rating2" class="fa fa-star" rating="2"></span>
-                                                <span id="rating3" class="fa fa-star" rating="3"></span>
-                                                <span id="rating4" class="fa fa-star" rating="4"></span>
-                                                <span id="rating5" class="fa fa-star" rating="5"></span>
+                                    <div class="col-12 p-3">
+                                        <div class="form-group">
+                                            <div id="review-name">
+                                                <label for="reviewName" class="font-weight-bold">Name</label>
+                                                <input type="text" class="form-control" id="reviewName" placeholder="Enter the name of the item">
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-7 p-0 pr-3">
                                         <div class="form-group">
                                             <div id="review-Category">
                                                 <label for="reviewCategory" class="font-weight-bold mr-3">Category</label>
@@ -93,11 +81,12 @@
                                                 <textarea class="form-control" id="reviewComments" rows="5"></textarea>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <div class="form-group mt-3">
-                                    <div id="review-map" class="col-12 col p-5 border">
-                                        GOOGLE MAP API STUFF HERE
+                                        <div class="form-group">
+                                            <div id="review-rating">
+                                                <label for="reviewRating" class="font-weight-bold">Rating</label>
+                                                <input type="text" class="form-control" id="reviewRating" placeholder="Enter a rating 0-5">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <button id="review-bttnSave" class="btn mt-3 px-3 float-right text-white"><span class="h6">Close</span></button>
