stripped out some old logos

--- a/content-reviews.html
+++ b/content-reviews.html
@@ -61,16 +61,9 @@
     </main>
     <footer class="container">
         <div id="row-footer" class="row">
-            <div id="footer-left" class="col-3 footer text-center text-white">
-                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
+            <div id="footer-center" class="col footer py-4 text-center text-white align-self-end">
+                Copyright © 2019 Review Me Inc
             </div>
-            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019 Exceptional Pirates Inc
-            </div>
-            <div id="footer-right" class="col-3 footer text-center text-white">
-                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
-            </div>
-        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
