--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet'>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/styles/styles.css">
     <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
     <title>MyReviews</title>
 </head>
+
 <body>
     <header class="container container-fluid border">
         <div id="row-header" class="row pl-3 bg-white border align-items-center">
@@ -23,69 +26,64 @@
             <div id="header-userInfo" class="col-4 col-md-7 pr-md-5">
                 <div id="row-avatar" class="row">
                     <div id="avatar" class="col text-right">
-                        
+
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </header>
     <main class="container bg-light">
         <div class="row mt-5">
-                <div class="col-sm-4 col-md-6 col-lg-6 ml-5 bg-light shadow-default rounded" id="input-card"> 
-                    <div class="card-header text-white">
-                            User Information
-                        </div>
-                        <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" class="form-control" id="name-first">
-                        </div>
-                        <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" class="form-control" id="name-last">
-                        </div>
-                        <div class="form-group">
-                            <label for="userName">User Name</label>
-                            <input type="text" class="form-control" id="userName">
-                        </div>
-                        <button type="button" class="btn btn-primary mb-2 mx-2" id = "submit" style="width: 10rem;">Submit</button>
-                    </div>
+            <div class="col-sm-4 col-md-6 col-lg-8 mx-auto bg-light shadow-default rounded" id="input-card">
+                <div class="card-header text-white text-center h3">
+                    User Information
+                </div>
+                <div class="form-group ml-3">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control" id="name-first">
+                </div>
+                <div class="form-group ml-3">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control" id="name-last">
+                </div>
+                <div class="form-group ml-3">
+                    <label for="userName">User Name</label>
+                    <input type="text" class="form-control" id="userName">
+                </div>
+                <button type="button" class="btn btn-primary mb-2 mx-2" id="submit"
+                    style="width: 10rem;">Submit</button>
+            </div>
             <div class="col-5 text-center mt-5" id="page-title">
-                    <img src="assets/images/animated2.gif" height="80%" width="80%" class="rounded">
-                      <!-- Begin Modal -->
-                        <div id="loginModal" class="modal" tabindex="-1" role="dialog">
-                            <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header card-header text-white">
-                                  <h5 class="modal-title">User info Required</h5>
-                                </div>
-                                <div class="modal-body">
-                                  <p>Please provide your First Name, Last Name, and User Name</p>
-                                </div>
-                                <div class="modal-footer">
-                                  <button id="loginModalClose" type="button" class="btn btn-secondary">Close</button>
-                                </div>
-                              </div>
+                <!-- Begin Modal -->
+                <div id="loginModal" class="modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header card-header text-white">
+                                <h5 class="modal-title">User info Required</h5>
+                            </div>
+                            <div class="modal-body">
+                                <p>Please provide your First Name, Last Name, and User Name</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="loginModalClose" type="button" class="btn btn-secondary">Close</button>
                             </div>
                         </div>
-                    <!-- End Modal -->
+                    </div>
+                </div>
+                <!-- End Modal -->
             </div>
         </div>
     </main>
     <footer class="container">
         <div id="row-footer" class="row">
-            <div id="footer-left" class="col-3 footer text-center text-white">
-                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
-            </div>
-            <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019 Exceptional Pirates Inc
-            </div>
-            <div id="footer-right" class="col-3 footer text-center text-white">
-                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+            <div id="footer-center" class="col footer py-4 text-center text-white align-self-end">
+                Copyright © 2019 Review Me Inc
             </div>
         </div>
     </footer>
 
     <script src="assets/javascript/javascript.js"></script>
 </body>
+
 </html>
