remove old footer information

--- a/content-form.html
+++ b/content-form.html
@@ -99,14 +99,8 @@
     </main>
     <footer class="container">
         <div id="row-footer" class="row">
-            <div id="footer-left" class="col-3 footer text-center text-white">
-                <img id="imgSkull" class="footer-imgs" src="assets/images/skull.png" alt="Skull">
-            </div>
             <div id="footer-center" class="col footer pb-2 text-center text-white align-self-end">
-                Copyright © 2019 Exceptional Pirates Inc
-            </div>
-            <div id="footer-right" class="col-3 footer text-center text-white">
-                <img id="imgShip" class="footer-imgs" src="assets/images/flag.gif" alt="flag">
+                Copyright © 2019 sthmpsn
             </div>
         </div>
     </footer>
