--- a/content-reviews.html
+++ b/content-reviews.html
@@ -62,7 +62,7 @@
     <footer class="container">
         <div id="row-footer" class="row">
             <div id="footer-center" class="col footer py-4 text-center text-white align-self-end">
-                Copyright © 2019 Review Me Inc
+                Copyright © 2019 sthmpsn
             </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
