--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer class="container">
         <div id="row-footer" class="row">
             <div id="footer-center" class="col footer py-4 text-center text-white align-self-end">
-                Copyright © 2019 Review Me Inc
+                Copyright © 2019 sthmpsn
             </div>
         </div>
     </footer>
